rushmore/app/resources/css/marketing.css
/* ... */
#select-class-button {
    font-size: 15px;
    text-align: center;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-user-select: none;
    -moz-user-select: none;
     -ms-user-select: none;
         user-select: none
}


#choose-class-container  #controller-container {
    font-size: 40px;
    color: white;
    height:100px;  
    margin-top: 40px;  
}

/*
////////////////////////////////////////////
    
    TUTORIAL stuff
    
////////////////////////////////////////////
*/

#tutorial-container {
    background-color: #446CB3;
    height: 100%;
    top: 0%;
    width: 100%;    
    position: absolute;
    color: white;
    position: fixed;
}

#tutorial-sliding-container{
    height: 100%;
    width: 600%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    transition: all 800ms;
}

.tutorial-page-container {
    height: 100%;
    background-size: cover;
    background-position-x: 40%;
}

.mini-lesson {
    height: 30%;
    width: 100%;
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
            -webkit-flex-flow: row nowrap;
                -ms-flex-flow: row nowrap;
                    flex-flow: row nowrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.mini-lesson .text {
    width: 70%;
    padding-left: 20px;
}

.mini-lesson .text h2 {
    margin: 30px 0px 0px 0px !important;
}

.mini-lesson .text p {
    color: white;
    font-size: 20px;
    margin-top: 0px;
}

.mini-lesson .image {
    width: 35%;
}

.tutorial-page-multi {
    height: 100%;
    width: 100%;  
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
    -webkit-flex-flow: column wrap;
        -ms-flex-flow: column wrap;
            flex-flow: column wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    position: relative;
    background-size: cover;
}


.tutorial-page-single {
    height: 100%;
    width: 100%;  
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
    -webkit-flex-flow: column wrap;
        -ms-flex-flow: column wrap;
            flex-flow: column wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    position: relative;    
}


#lessons-container {
    width: 100%;
    height: 85vh;
}

#tutorial-controls {
    height: 15vh;
    width: 100%;
    font-size: 25px;
    /*position: fixed;*/
    background-color: #3A539B;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.tutorial-controls-button:active {
    background-color: #5D1F19;
}

.tutorial-controls-button {
    width: 25%;
    height: 100%;
    text-align: center;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

#tutorial-progress-indicator {
    width: 50%;
    height: 100%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.tutorial-lesson {
    height: 30%;
    width: 100%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    font-size: 18px;
}

.tutorial-lesson img {
    height: 100px;
    width: auto;
}

.tutorial-text {
    width: 80%;
    text-align: center;
    font-size: 25px;
    margin-top: 50%; 
 }

.tutorial-title {
    width: 80%;
    text-align: center;
    font-size: 30px;
 }

 .tutorial-image {
    width: 40%;
 }

 .tutorial-image img {
    width: 100%;
    height: 100%;
 }

.tutorial-left {
    -webkit-flex-flow: row-reverse wrap;
        -ms-flex-flow: row-reverse wrap;
            flex-flow: row-reverse wrap;
}

.tutorial-progress-dot {
    border-radius: 50%;
    width: 13px;
    height: 13px;    
    background-color: grey;
}

.tutorial-progress-dot-active {
    background-color: white;
}
/* ... */

